--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -397,7 +397,7 @@
     <tr>
       <td class="vb-outer" align="center" valign="top" bgcolor="#ffffff"
         style="background-color: #ffffff;">
-        <div style="display: none; font-size:1px; color: #333333; line-height: 1px; max-height:0px; max-width: 0px; opacity: 0; overflow: hidden;
+        <div style="display: none; font-size:1px; color: #697891; line-height: 1px; max-height:0px; max-width: 0px; opacity: 0; overflow: hidden;
           -ko-bind-text: @preheaderText"></div>
 
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
@@ -518,7 +518,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+                        <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                           data-ko-editable="longText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                         </td>
@@ -605,7 +605,7 @@
               <td height="9" style="font-size:1px; line-height: 1px;">&ensp;</td>
             </tr>
             <tr>
-              <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+              <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                 data-ko-editable="longText" class="long-text links-color">
                 <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
               </td>
@@ -678,7 +678,7 @@
         <table width="570" border="0" cellpadding="0" cellspacing="18" class="vb-container fullpad" bgcolor="#ffffff"
           style="width: 100%; max-width: 570px; background-color: #ffffff; -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor;">
           <tr>
-            <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+            <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
               data-ko-editable="longText" class="long-text links-color">
               <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts.</p>
               <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -728,7 +728,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+                        <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                           data-ko-editable="leftLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -774,7 +774,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+                        <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                           data-ko-editable="middleLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -820,7 +820,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+                        <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                           data-ko-editable="rightLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -894,7 +894,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+                        <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                           data-ko-editable="leftLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -940,7 +940,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
+                        <td align="left" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;"
                           data-ko-editable="rightLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts.</p>
                         </td>
@@ -1063,7 +1063,7 @@
                   hspace="0" border="0" vspace="0" width="570" data-ko-placeholder-height="285"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=570%2C285" class="mobile-full attribute-width-570"
                   alt="" style="max-width: 570px; display: block; border-radius: 0px; width: 100%; height: auto; font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-alt: @image.alt;" /></a>
             </td>
           </tr>
@@ -1076,7 +1076,7 @@
                   hspace="0" border="0" vspace="0" width="534" data-ko-placeholder-height="267"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=534%2C267" class="mobile-full attribute-width-534"
                   alt="" style="max-width: 534px; display: block; border-radius: 0px; width: 100%; height: auto; font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-alt: @image.alt;" /></a>
             </td>
           </tr>
@@ -1108,7 +1108,7 @@
                   hspace="0" align="left" border="0" vspace="0" width="285" height="142" class="mobile-full attribute-width-285"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=285%2C142"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
 </div><!--[if (gte mso 9)|(lte ie 8)]></td>
 <td align="left" valign="top" width="285">
@@ -1117,7 +1117,7 @@
                   hspace="0" align="right" border="0" vspace="0" width="285" height="142" class="mobile-full attribute-width-285"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=285%2C142"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
 </div>
 <!--[if (gte mso 9)|(lte ie 8)]></td><![endif]-->
@@ -1142,7 +1142,7 @@
                         hspace="0" align="left" border="0" vspace="0" width="258" height="129"
                         src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full attribute-width-258"
                         alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                        font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                        font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                         -ko-attr-alt: @leftImage.alt;" /></a>
                   </td>
                 </tr>
@@ -1159,7 +1159,7 @@
                         hspace="0" align="right" border="0" vspace="0" width="258" height="129"
                         src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full attribute-width-258"
                         alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                        font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                        font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                         -ko-attr-alt: @rightImage.alt;" /></a>
                   </td>
                 </tr>
@@ -1198,7 +1198,7 @@
                   hspace="0" align="left" border="0" vspace="0" width="190" height="95" class="mobile-full attribute-width-190"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C95"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
 </div><!--[if (gte mso 9)|(lte ie 8)]></td>
 <td align="left" valign="top" width="190">
@@ -1207,7 +1207,7 @@
                   hspace="0" align="left" border="0" vspace="0" width="190" height="95" class="mobile-full attribute-width-190"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C95"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-height: @imageHeight; -ko-attr-alt: @middleImage.alt;" /></a>
 </div><!--[if (gte mso 9)|(lte ie 8)]></td>
 <td align="left" valign="top" width="190">
@@ -1216,7 +1216,7 @@
                   hspace="0" align="right" border="0" vspace="0" width="190" height="95" class="mobile-full attribute-width-190"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C95"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                  font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                  font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                   -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
 </div>
 <!--[if (gte mso 9)|(lte ie 8)]></td><![endif]-->
@@ -1240,7 +1240,7 @@
                       hspace="0" align="left" border="0" vspace="0" width="166" height="83"
                       src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                      font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                      font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                       -ko-attr-alt: @leftImage.alt;" /></a>
                   </td>
                 </tr>
@@ -1257,7 +1257,7 @@
                       hspace="0" align="left" border="0" vspace="0" width="166" height="83"
                       src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                      font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
+                      font-family: Rubik, Arial, Helvetica, sans-serif; color: #697891;
                       -ko-attr-alt: @middleImage.alt;" /></a>
                   </td>
                 </tr>
@@ -1306,10 +1306,10 @@
   <!-- /spacerBlock -->
 
   <!-- socialBlock -->
-  <table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#333333"
-    style="background-color: #333333;"  data-ko-block="socialBlock">
+  <table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#697891"
+    style="background-color: #697891;"  data-ko-block="socialBlock">
     <tr>
-      <td align="center" valign="top" bgcolor="#333333" style="background-color: #333333;">
+      <td align="center" valign="top" bgcolor="#697891" style="background-color: #697891;">
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
         <div class="oldwebkit">
         <table width="570" style="width: 100%; max-width: 570px" border="0" cellpadding="0" cellspacing="9" class="vb-row fullpad" align="center">
