--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -527,12 +527,12 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                                style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                              <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                                style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">Button</a>
                               </td>
                             </tr>
@@ -617,12 +617,12 @@
               <td valign="top">
                 <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full">
                   <tr>
-                    <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                      style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                      padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                    <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                      style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                      padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                       -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                       -ko-color: @buttonStyle.color; ">
-                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                         -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">Button</a>
                     </td>
                   </tr>
@@ -737,12 +737,12 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                                style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                              <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                                style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -783,12 +783,12 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                                style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                              <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                                style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @middleButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -829,12 +829,12 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                                style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                              <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                                style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -903,12 +903,12 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                                style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                              <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                                style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -949,12 +949,12 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26"
-                                style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
-                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 15px;
+                              <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
+                                style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -1025,13 +1025,13 @@
 
               <table cellpadding="0" border="0" align="center" cellspacing="0" class="mobile-full">
                 <tr>
-                  <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="50"
-                    style="font-size:22px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #ffffff; font-weight: bold;
-                    padding-left: 14px; padding-right: 14px; background-color: #1a3867; border-radius: 4px;
+                  <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="50"
+                    style="font-size:22px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #ffffff; font-weight: 400;
+                    padding-left: 14px; padding-right: 14px; background-color: #0f2e38; border-radius: 4px; text-transform: uppercase;
                     -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
                     -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-color: @bigButtonStyle.color; ">
-                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
+                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
                       -ko-color: @bigButtonStyle.color;">Button</a>
                   </td>
                 </tr>
